--- a/tatua-refactored/index.html
+++ b/tatua-refactored/index.html
@@ -20,6 +20,7 @@
             <nav class="header__nav">
                 <a href="#" class="nav-link is-active" data-screen="raiseTicket">Raise Ticket</a>
                 <a href="#" class="nav-link" data-screen="ticketsList">Tickets List</a>
+                <a href="odata.html" style="color: aliceblue; text-decoration: none;" >Odata People</a>
             </nav>
             <div class="header__storage-selector">
                 <label for="storageType">Storage:</label>
@@ -271,8 +272,8 @@
                     </div>
                 </form>
             </div>
-            <div class="modal-footer"><button class="btn modal-cancel-btn">Cancel</button><button
-                    id="saveChangesBtn" class="btn btn--primary">Save Changes</button></div>
+            <div class="modal-footer"><button class="btn modal-cancel-btn">Cancel</button><button id="saveChangesBtn"
+                    class="btn btn--primary">Save Changes</button></div>
         </div>
     </div>
     <div id="confirmModal" class="modal">
@@ -283,8 +284,8 @@
             <div class="modal-body">
                 <p>Are you sure you want to delete this ticket? This action cannot be undone.</p>
             </div>
-            <div class="modal-footer"><button class="btn modal-cancel-btn">Cancel</button><button
-                    id="confirmOkBtn" class="btn btn--danger">Delete</button></div>
+            <div class="modal-footer"><button class="btn modal-cancel-btn">Cancel</button><button id="confirmOkBtn"
+                    class="btn btn--danger">Delete</button></div>
         </div>
     </div>
     <div id="filterModal" class="modal">
